[package]
name = "powdercore"
version = "0.1.0"
edition = "2021"
authors = ["Robert <robertrhino@protonmail.com>"]
description = "💥 PowderCore™ - modular physics simulation engine powering the Powder Sandbox series."
license = "BSD-3-Clause"
repository = "https://github.com/RobertFlexx/PowderCore"
readme = "README.md"
keywords = ["physics", "sandbox", "engine", "simulation", "powder"]
categories = ["science", "simulation", "game-engines"]

[lib]
name = "powdercore"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[features]
default = ["std"]
# Optional no_std support later (embedded?)
std = []

[dependencies]
# keeping it dependency-free for now, pure rust engine.

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
